--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<p>Hello World</p>
+<html>
+<head>
+  <title>Service App</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1>Service App</h1>
+</body>
+</html>
