--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
 </head>
 <body>
   <h1>Service App</h1>
+  <div class="menu">
+    <a href="index.html">Home</a>
+    <a href="login.html">Log in</a>
+    <a href="signup.html">Sign up</a>
+  </div>
+  <hr />
 </body>
 </html>
