--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Service App</h1>
+  <h1 class="title">Service App</h1>
   <div class="menu">
     <a href="index.html">Home</a>
     <a href="login.html">Log in</a>
