--- a/login.html
+++ b/login.html
@@ -1,1 +1,19 @@
-
+<html>
+<head>
+  <title>Service App Login</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="login-page">
+    <div class="form">
+      <form class="login-form">
+        <input type="text" placeholder="email">
+        <input type="text" placeholder="password">
+        <button>Sign In</button>
+        <button href="signup.html">Create Account</button>
+      </form>
+    </div>
+    <button href="index.html">Home</button>
+  </div>
+</bodh>
+<html>
