--- a/login.html
+++ b/login.html
@@ -10,10 +10,10 @@
         <input type="text" placeholder="email">
         <input type="text" placeholder="password">
         <button>Sign In</button>
-        <button href="signup.html">Create Account</button>
+        <button href="/signup.html">Create Account</button>
       </form>
     </div>
-    <button href="index.html">Home</button>
+    <button href="/index.html">Home</button>
   </div>
 </bodh>
 <html>
