--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <button href="/signup.html">Create Account</button>
       </form>
     </div>
-    <button href="/index.html">Home</button>
+    <button onclick="window.location.href='/index.html'">Home</button>
   </div>
 </bodh>
 <html>
