--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
         <input type="text" placeholder="email">
         <input type="text" placeholder="password">
         <button>Sign In</button>
-        <button onclick="window.location.href='/index.html'">Create Account</button>
+        <button onclick="window.location.href='/signup.html'">Create Account</button>
       </form>
     </div>
     <button onclick="window.location.href='/index.html'">Home</button>
