--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <br>
         <button>Sign In</button>
         <button onclick="window.location.href='/signup.html'">Create Account</button>
-        <button onclick="window.location.href='/index.html'">Home</button>
+        <button onclick="window.location.href='/index.html'">Go Home</button>
       </form>
     </div>
   </div>
