--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
         <input type="text" placeholder="password">
         <br>
         <button>Sign In</button>
-        <button onclick="window.location.href='/signup.html'">Create Account</button>
-        <button onclick="window.location.href='/index.html'">Go Home</button>
+        <button onclick="window.location.href='../signup.html'">Create Account</button>
+        <button onclick="window.location.href='../index.html'">Go Home</button>
       </form>
     </div>
   </div>
