--- a/login.html
+++ b/login.html
@@ -11,9 +11,9 @@
         <br>
         <input type="text" placeholder="password">
         <br>
-        <button>Sign In</button>
-        <button onclick="window.location.href='https://vigr101.github.io/signup.html'">Create Account</button>
-        <button onclick="window.location.href='https://vigr101.github.io/index.html'">Go Home</button>
+        <a>Sign In</a>
+        <a href="https://vigr101.github.io/signup.html">Create Account</a>
+        <a href="https://vigr101.github.io/index.html">Go Home</a>
       </form>
     </div>
   </div>
