--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
   <div class="login-page">
     <div class="form">
       <form class="login-form">
+        <h3>Sign In</h3>
         <input type="text" placeholder="email">
         <br>
         <input type="text" placeholder="password">
