--- a/login.html
+++ b/login.html
@@ -12,9 +12,9 @@
         <br>
         <input type="text" placeholder="password">
         <br>
-        <a>Sign In</a>
-        <a href="https://vigr101.github.io/signup.html">Create Account</a>
-        <a href="https://vigr101.github.io/index.html">Go Home</a>
+        <button>Sign In</button>
+        <button onclick="window.location.href='/signup.html'">Create Account</button>
+        <button onclick="window.location.href='/index.html'">Go Home</button>
       </form>
     </div>
   </div>
