--- a/login.html
+++ b/login.html
@@ -12,9 +12,9 @@
         <br>
         <input type="text" placeholder="password">
         <br>
-        <button>Sign In</button>
-        <button onclick="window.location.href='/signup.html'">Create Account</button>
-        <button onclick="window.location.href='/index.html'">Go Home</button>
+        <button class="sign-in-button">Sign In</button>
+        <button class="sign-in-button" onclick="window.location.href='/signup.html'">Create Account</button>
+        <button class="sign-in-button" onclick="window.location.href='/index.html'">Go Home</button>
       </form>
     </div>
   </div>
