--- a/signup.html
+++ b/signup.html
@@ -1,1 +1,30 @@
-
+<html>
+<head>
+  <title>Service App Registration</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="login-page">
+    <div class="form">
+      <form class="login-form">
+        <h3>Register</h3>
+        <input type="text" placeholder="name">
+        <br>
+        <input type="number" placeholder="age">
+        <br>
+        <input type="text" placeholder="school/organization">
+        <br>
+        <input type="text" placeholder="address">
+        <br>
+        <input type="text" placeholder="email">
+        <br>
+        <input type="text" placeholder="password">
+        <br>
+        <button class="sign-in-button">Sign In</button>
+        <button class="sign-in-button" onclick="window.location.href='/signup.html'">Create Account</button>
+        <button class="sign-in-button" onclick="window.location.href='/index.html'">Go Home</button>
+      </form>
+    </div>
+  </div>
+</bodh>
+<html>
