--- a/signup.html
+++ b/signup.html
@@ -20,9 +20,8 @@
         <br>
         <input type="text" placeholder="password">
         <br>
-        <button class="sign-in-button">Sign In</button>
-        <button class="sign-in-button" onclick="window.location.href='/signup.html'">Create Account</button>
-        <button class="sign-in-button" onclick="window.location.href='/index.html'">Go Home</button>
+        <button class="sign-in-button">Register</button>
+        <button class="sign-in-button" onclick="window.location.href='/index.html'">Home</button>
       </form>
     </div>
   </div>
