--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         <br>
         <button class="sign-in-button">Sign In</button>
         <button class="sign-in-button" onclick="window.location.href='/signup.html'">Create Account</button>
-        <button class="sign-in-button" onclick="window.location.href='/index.html'">Go Home</button>
+        <button class="sign-in-button" onclick="window.location.href='/index.html'">Home</button>
       </form>
     </div>
   </div>
