--- a/signup.html
+++ b/signup.html
@@ -16,6 +16,12 @@
         <br>
         <input type="text" placeholder="address">
         <br>
+        <input type="text" placeholder="city">
+        <br>
+        <input type="text" placeholder="state">
+        <br>
+        <input type="text" placeholder="country">
+        <br>
         <input type="text" placeholder="email">
         <br>
         <input type="text" placeholder="password">
