--- a/signup.html
+++ b/signup.html
@@ -22,9 +22,9 @@
         <br>
         <input type="text" placeholder="country">
         <br>
-        <input type="text" placeholder="email">
+        <input type="email" placeholder="email">
         <br>
-        <input type="text" placeholder="password">
+        <input type="password" placeholder="password">
         <br>
         <button class="sign-in-button">Register</button>
         <button class="sign-in-button" onclick="window.location.href='/index.html'">Home</button>
