--- a/login.html
+++ b/login.html
@@ -8,9 +8,9 @@
     <div class="form">
       <form class="login-form">
         <h3>Sign In</h3>
-        <input type="email" placeholder="email">
+        <input id="email" type="email" placeholder="email">
         <br>
-        <input type="password" placeholder="password">
+        <input id="password" type="password" placeholder="password">
         <br>
         <button class="sign-in-button">Sign In</button>
         <button class="sign-in-button" onclick="window.location.href='/signup.html'">Create Account</button>
