--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@
         <input id="password" type="password" placeholder="password">
         <br>
         <button class="sign-in-button">Sign In</button>
-        <button class="sign-in-button" onclick="window.location.href='/signup.html'">Create Account</button>
-        <button class="sign-in-button" onclick="window.location.href='/index.html'">Home</button>
+        <a href="/signup.html"><button class="sign-in-button">Create Account</button></a>
+        <a href="/index.html"><button class="sign-in-button">Home</button></a>
       </form>
     </div>
   </div>
