--- a/login.html
+++ b/login.html
@@ -12,9 +12,9 @@
         <br>
         <input id="password" type="password" placeholder="password">
         <br>
-        <button class="sign-in-button">Sign In</button>
-        <a href="/signup.html"><button class="sign-in-button">Create Account</button></a>
-        <a href="/index.html"><button class="sign-in-button">Home</button></a>
+        <a class="sign-in-button">Sign In</a>
+        <a class="sign-in-button" href="/signup.html">Create Account</a>
+        <a class="sign-in-button" href="/index.html">Home</a>
       </form>
     </div>
   </div>
