--- a/signup.html
+++ b/signup.html
@@ -26,8 +26,8 @@
         <br>
         <input id="password" type="password" placeholder="password">
         <br>
-        <button class="sign-in-button">Register</button>
-        <button class="sign-in-button" onclick="window.location.href='/index.html'">Home</button>
+        <a class="sign-in-button">Register</a>
+        <a class="sign-in-button" href="/index.html">Home</a>
       </form>
     </div>
   </div>
