--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <head>
   <title>Service App Login</title>
   <link rel="stylesheet" href="style.css">
+  <script src="main.js"></script>
 </head>
 <body>
   <div class="login-page">
