--- a/signup.html
+++ b/signup.html
@@ -2,6 +2,7 @@
 <head>
   <title>Service App Registration</title>
   <link rel="stylesheet" href="style.css">
+  <script src="main.js"></script>
 </head>
 <body>
   <div class="login-page">
@@ -26,7 +27,7 @@
         <br>
         <input id="password" type="password" placeholder="password">
         <br>
-        <a class="sign-in-button">Register</a>
+        <button class="sign-in-button" onclick="save_info()">Register</button>
         <a class="sign-in-button" href="/index.html">Home</a>
       </form>
     </div>
