--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <div class="form">
       <form class="login-form">
         <h3>Sign In</h3>
-        <input id="email" type="email" placeholder="email">
+        <input id="user" type="text" placeholder="email">
         <br>
         <input id="password" type="password" placeholder="password">
         <br>
