--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
         <br>
         <input type="text" placeholder="country">
         <br>
-        <input id="user" type="text" placeholder="email">
+        <input id="email" type="email" placeholder="email">
         <br>
         <input id="password" type="password" placeholder="password">
         <br>
