--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,7 @@
   <title>Service App Registration</title>
   <link rel="stylesheet" href="style.css">
   <script src="main.js"></script>
+  <script src="sql-warm.js"></script>
 </head>
 <body>
   <div class="login-page">
