--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <title>Service App Login</title>
   <link rel="stylesheet" href="style.css">
   <script src="main.js"></script>
-  <script src="sql-warm.js"></script>
+  <script src="sql-wasm.js"></script>
 </head>
 <body>
   <div class="login-page">
