--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   </div>
   <hr />
   <div class="main">
-    <iframe class="vimeo-embed" src="https://player.vimeo.com/video/148751763" width="533" height="300" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+    <center>
+      <iframe class="vimeo-embed" src="https://player.vimeo.com/video/148751763" width="533" height="300" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+    </center>
   </div>
 </body>
 </html>
